test/fail/scope_traits_external_deduced.cpp
scope_<traits&> -> external -> static_assert
